fixed issue with alignment on home page when resizing to a smaller screen

--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -3,7 +3,9 @@
   background-size: cover;
   background-position: center;
   position: relative;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hero::after {
@@ -28,9 +30,9 @@
   font-size: 60px;
   font-family: “Courier New”, Courier, “Lucida Sans Typewriter”, “Lucida Typewriter”, monospace;
   color: #d49e8d;
+  text-align: center;
   position: absolute;
   bottom: 0;
-  left: 33%;
 }
 
 .hero img{
@@ -38,7 +40,14 @@
   height: 65%;
   border-color: #d49e8d;
   border-style: double;
-  position: absolute;
-  left: 40%;
-  top: 16%;
+ 
 }
+
+@media only screen and (max-width: 600px) {
+  .hero h1 {
+      font-size: 18px !important;
+  }
+.hero img{
+  height: 45%;
+}
+};
